tests/scan/fixtures/validation/negative/clean_go_clean-metrics-exporter/go.mod
module github.com/example/clean-metrics-exporter
go 1.21
